# RDM_Advanced_C-

./: .gitignore  .gitmodules
build_test/src/: first.cpp
demo/: copy_constructor.cpp  delegating_constructors.cpp  demo_382.cpp  ex_3_8_1_this_pointer.cpp  move_semantics1.cpp  move_semantics2.cpp
exercises_unit_2/: CMakeLists.txt  lists
exercises_unit_2/src/: lists  lists.cpp  path_coordinates.cpp  path_coordinates_map.cpp  robot_heading_as_vector.cpp
library_velocity/: CMakeLists.txt  package.xml
library_velocity/include/library_velocity/: library_velocity.h
library_velocity/src/: library_velocity.cpp
my_robot_manager/: CMakeLists.txt  package.xml
my_robot_manager/include/my_robot_manager/: robot_manager.h
my_robot_manager/src/: commands.bash  robot_manager.cpp  robot_manager_node.cpp
odom_subs/: CMakeLists.txt
odom_subs/src/: odom_listener.cpp
robot_manager_composition/: CMakeLists.txt
robot_manager_composition/include/robot_manager_composition/: robot_manager_composition.h
robot_manager_composition/src/: robot_manager_composition.cpp  robot_manager_composition_node.cpp  system_information.cpp
robot_manager_inheritance/: CMakeLists.txt
robot_manager_inheritance/src/: base_robot_manager.cpp  base_robot_manager_node.cpp  mobile_robot_robot_manager.cpp  mobile_robot_robot_manager_node.cpp
stl_lib/: forward_function.cpp  it1.cpp  it3.cpp  map1.cpp  map_function.cpp  multiset.cpp  multiset_function.cpp  set1.cpp  set_function.cpp  u_function.cpp  unmap.cpp
test_library/src/: test_library.cpp
(+2 files in other folders)
